--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rehyan Yadav</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://codewithrehyan.blogspot.com" class="blogspot"><i class="bx bxl-blogger"></i></a>
@@ -84,7 +84,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3 style="color: rgb(0, 157, 255);">Software &amp;DevOPS Engineer .</h3>
